force-app/main/default/objects/Case/fields/Parte__c.field-meta.xml
<CustomField>
    <fullName>Parte__c</fullName>
    <label>Parte</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMORTIGUADOR TRASERO</fullName>
            </value>
            <value>
                <fullName>ANILLOS</fullName>
            </value>
            <value>
                <fullName>ARBOL DE LEVAS</fullName>
            </value>
            <value>
                <fullName>AUTOMATICO MOTOR DE ARRANQUE</fullName>
            </value>
            <value>
                <fullName>BALANCIN</fullName>
            </value>
            <value>
                <fullName>BANDAS DE FRENO TRASERO</fullName>
            </value>
            <value>
                <fullName>BARRA TELESCOPICA</fullName>
            </value>
            <value>
                <fullName>BATERIA</fullName>
            </value>
            <value>
                <fullName>BOBINA DE ENCENDIDO</fullName>
            </value>
            <value>
                <fullName>BOBINA PULSORA</fullName>
            </value>
            <value>
                <fullName>BOCINA</fullName>
            </value>
            <value>
                <fullName>BOMBA DE ACEITE</fullName>
            </value>
            <value>
                <fullName>BOMBA DE COMBUSTIBLE</fullName>
            </value>
            <value>
                <fullName>BUJES DE LA TIJERA</fullName>
            </value>
            <value>
                <fullName>CADENA DE ARRASTRE</fullName>
            </value>
            <value>
                <fullName>CADENILLA DE LEVAS</fullName>
            </value>
            <value>
                <fullName>CAJA DE HERRAMIENTAS</fullName>
            </value>
            <value>
                <fullName>CALAPIE DERECHO</fullName>
            </value>
            <value>
                <fullName>CALCOMANIA</fullName>
            </value>
            <value>
                <fullName>CALIPER DE FRENO TRASERO</fullName>
            </value>
            <value>
                <fullName>CALIPER FRENO DELANTERO</fullName>
            </value>
            <value>
                <fullName>CARBURADOR</fullName>
            </value>
            <value>
                <fullName>CARTER</fullName>
            </value>
            <value>
                <fullName>CATALOGO</fullName>
            </value>
            <value>
                <fullName>CAUCHO ESTRIBO</fullName>
            </value>
            <value>
                <fullName>CDI</fullName>
            </value>
            <value>
                <fullName>CHASIS</fullName>
            </value>
            <value>
                <fullName>CHICLER PRINCIPAL CB</fullName>
            </value>
            <value>
                <fullName>CIGÜEÑAL</fullName>
            </value>
            <value>
                <fullName>CILINDRO FRENO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>