force-app/main/default/objects/Case/fields/Persona_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Persona_de_Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Persona de Contacto</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos_Autos</relationshipName>
    <type>Lookup</type>
</CustomField>