force-app/main/default/objects/Case/fields/Placa_del_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Placa_del_vehiculo__c</fullName>
    <label>Placa del vehículo</label>
    <length>6</length>
    <type>Text</type>
</CustomField>