force-app/main/default/objects/Case/fields/Placa_entregada__c.field-meta.xml
<CustomField>
    <fullName>Placa_entregada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placa entregada</label>
    <type>Checkbox</type>
</CustomField>