force-app/main/default/objects/Case/fields/Primera_asignacion_motos__c.field-meta.xml
<CustomField>
    <fullName>Primera_asignacion_motos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primera asignación motos</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos1</relationshipName>
    <type>Lookup</type>
</CustomField>