force-app/main/default/objects/Case/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <label>Producto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BIZ C 100</fullName>
            </value>
            <value>
                <fullName>BIZ C 125</fullName>
            </value>
            <value>
                <fullName>BROSS 125 ES</fullName>
            </value>
            <value>
                <fullName>BROSS 125 KS</fullName>
            </value>
            <value>
                <fullName>C 70</fullName>
            </value>
            <value>
                <fullName>C 90</fullName>
            </value>
            <value>
                <fullName>CB 110</fullName>
            </value>
            <value>
                <fullName>CB 125 E</fullName>
            </value>
            <value>
                <fullName>CBF 125</fullName>
            </value>
            <value>
                <fullName>CBF 150</fullName>
            </value>
            <value>
                <fullName>CBF GP</fullName>
            </value>
            <value>
                <fullName>CBF PREMIUM</fullName>
            </value>
            <value>
                <fullName>CBF SPORT</fullName>
            </value>
            <value>
                <fullName>CBZ 160</fullName>
            </value>
            <value>
                <fullName>CD 100</fullName>
            </value>
            <value>
                <fullName>CD 101</fullName>
            </value>
            <value>
                <fullName>ECO 100</fullName>
            </value>
            <value>
                <fullName>ECO100 +</fullName>
            </value>
            <value>
                <fullName>CD DELUXE</fullName>
            </value>
            <value>
                <fullName>ELITE 125 ES</fullName>
            </value>
            <value>
                <fullName>INVICTA CB 150</fullName>
            </value>
            <value>
                <fullName>MB 100</fullName>
            </value>
            <value>
                <fullName>PASSION</fullName>
            </value>
            <value>
                <fullName>PASSION +</fullName>
            </value>
            <value>
                <fullName>HERO HONDA MOTORS</fullName>
            </value>
            <value>
                <fullName>SPLENDOR +</fullName>
            </value>
            <value>
                <fullName>SPLENDOR FT</fullName>
            </value>
            <value>
                <fullName>SPLENDOR NXG</fullName>
            </value>
            <value>
                <fullName>SPLENDOR NXG ES</fullName>
            </value>
            <value>
                <fullName>STORM 125</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>