force-app/main/default/objects/Case/fields/Referencia_comercial__c.field-meta.xml
<CustomField>
    <fullName>Referencia_comercial__c</fullName>
    <label>Referencia comercial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>