force-app/main/default/objects/Case/fields/Regional_responsable__c.field-meta.xml
<CustomField>
    <fullName>Regional_responsable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional responsable</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>