force-app/main/default/objects/Case/fields/Registro_transito_completado__c.field-meta.xml
<CustomField>
    <fullName>Registro_transito_completado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registro tránsito completado</label>
    <type>Checkbox</type>
</CustomField>