force-app/main/default/objects/Case/fields/Repositorio_de_fotos_y_videos__c.field-meta.xml
<CustomField>
    <fullName>Repositorio_de_fotos_y_videos__c</fullName>
    <label>Repositorio de fotos y videos</label>
    <type>Url</type>
</CustomField>