force-app/main/default/objects/Case/fields/Repuesto__c.field-meta.xml
<CustomField>
    <fullName>Repuesto__c</fullName>
    <label>Repuesto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>