force-app/main/default/objects/Case/fields/Requiere_credito_bancario__c.field-meta.xml
<CustomField>
    <fullName>Requiere_credito_bancario__c</fullName>
    <formula>IF(  OR(CONTAINS(TEXT(Oportunidad__r.Forma_de_pago__c), &quot;Credito&quot;), CONTAINS(TEXT(Oportunidad__r.Forma_de_pago__c), &quot;Crédito&quot;)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requiere crédito bancario</label>
    <type>Checkbox</type>
</CustomField>