force-app/main/default/objects/Case/fields/Respuesta_Enviada__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_Enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Respuesta Enviada</label>
    <type>Checkbox</type>
</CustomField>