force-app/main/default/objects/Case/fields/Respuesta_final_caso__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_final_caso__c</fullName>
    <label>Respuesta final del caso</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>