force-app/main/default/objects/Case/fields/Solucion_encontradaBaseConocimiento__c.field-meta.xml
<CustomField>
    <fullName>Solucion_encontradaBaseConocimiento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solución encontrada en BdC</label>
    <type>Checkbox</type>
</CustomField>