force-app/main/default/objects/Case/fields/Subcategoria_2__c.field-meta.xml
<CustomField>
    <fullName>Subcategoria_2__c</fullName>
    <label>Subcategoría 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subcategoria__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultas, Información o Documentación</fullName>
            </value>
            <value>
                <fullName>Inconveniente con la entrega del vehículo</fullName>
            </value>
            <value>
                <fullName>Inconveniente con producto</fullName>
            </value>
            <value>
                <fullName>Inconveniente con Accesorios</fullName>
            </value>
            <value>
                <fullName>Garantía</fullName>
            </value>
            <value>
                <fullName>Habeas Data</fullName>
            </value>
            <value>
                <fullName>Trámites</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Garantía de Fábrica</fullName>
            </value>
            <value>
                <fullName>Garantía Total</fullName>
            </value>
            <value>
                <fullName>Disponibilidad de Repuestos</fullName>
            </value>
            <value>
                <fullName>Comunicación</fullName>
            </value>
            <value>
                <fullName>Accesorios (Radio, Start Stop, otros)</fullName>
            </value>
            <value>
                <fullName>Diagnóstico</fullName>
            </value>
            <value>
                <fullName>Reparación</fullName>
            </value>
            <value>
                <fullName>Creación de Referencias</fullName>
            </value>
            <value>
                <fullName>Nota Crédito</fullName>
            </value>
            <value>
                <fullName>Actualización de Precios</fullName>
            </value>
            <value>
                <fullName>Ubicación del Repuesto</fullName>
            </value>
            <value>
                <fullName>Cotización de Repuesto</fullName>
            </value>
            <value>
                <fullName>Consulta Referencia Sustituta</fullName>
            </value>
            <value>
                <fullName>Consulta de Manual de Partes</fullName>
            </value>
            <value>
                <fullName>SIHON</fullName>
            </value>
            <value>
                <fullName>Creación y Desbloqueo Usuario Honda IN</fullName>
            </value>
            <value>
                <fullName>Consulta Fecha de llegada Repuesto</fullName>
            </value>
            <value>
                <fullName>Desbloqueo de Referencias</fullName>
            </value>
            <value>
                <fullName>Solicitud Desarme de Vehículo</fullName>
            </value>
            <value>
                <fullName>Baterías</fullName>
            </value>
            <value>
                <fullName>Diferente a Baterías</fullName>
            </value>
            <value>
                <fullName>Eliminación o Modificación de usuario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>