force-app/main/default/objects/Case/fields/Subcategoria_3__c.field-meta.xml
<CustomField>
    <fullName>Subcategoria_3__c</fullName>
    <label>Subcategoría 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subcategoria_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red Propia</fullName>
            </value>
            <value>
                <fullName>Distribuidores</fullName>
            </value>
            <value>
                <fullName>Proveedor Externo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>