force-app/main/default/objects/Case/fields/Subcategoria__c.field-meta.xml
<CustomField>
    <fullName>Subcategoria__c</fullName>
    <label>Subcategoria</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actividades Prentrega del Vehículo</fullName>
            </value>
            <value>
                <fullName>Agendamiento de taller</fullName>
            </value>
            <value>
                <fullName>Agendar Cita de Taller</fullName>
            </value>
            <value>
                <fullName>Atencion de recall en taller</fullName>
            </value>
            <value>
                <fullName>Certificacion de importacion</fullName>
            </value>
            <value>
                <fullName>Cobro del servicio</fullName>
            </value>
            <value>
                <fullName>Consulta de datos de contactabilidad</fullName>
            </value>
            <value>
                <fullName>Consulta entrega de moto</fullName>
            </value>
            <value>
                <fullName>Consulta entrega de repuesto</fullName>
            </value>
            <value>
                <fullName>Consulta normal</fullName>
            </value>
            <value>
                <fullName>Consulta sobre pagos y creditos</fullName>
            </value>
            <value>
                <fullName>Copia de factura</fullName>
            </value>
            <value>
                <fullName>Cotizacion de accesorio (Casco, chaqueta, etc)</fullName>
            </value>
            <value>
                <fullName>Cotizacion de repuesto</fullName>
            </value>
            <value>
                <fullName>Cotizacion de servicio</fullName>
            </value>
            <value>
                <fullName>Cotizar un Repuesto</fullName>
            </value>
            <value>
                <fullName>Cotizar un Servicio</fullName>
            </value>
            <value>
                <fullName>Demanda</fullName>
            </value>
            <value>
                <fullName>Demora entrega motocicleta</fullName>
            </value>
            <value>
                <fullName>Demora entrega motocicleta tienda virtual</fullName>
            </value>
            <value>
                <fullName>Devolucion de dinero</fullName>
            </value>
            <value>
                <fullName>Exclusión de Habeas Data</fullName>
            </value>
            <value>
                <fullName>Falla tecnica</fullName>
            </value>
            <value>
                <fullName>Felicitacion</fullName>
            </value>
            <value>
                <fullName>Felicitaciones Taller</fullName>
            </value>
            <value>
                <fullName>Felicitaciones Ventas</fullName>
            </value>
            <value>
                <fullName>Garantia</fullName>
            </value>
            <value>
                <fullName>Garantia del concesionario</fullName>
            </value>
            <value>
                <fullName>Garantías</fullName>
            </value>
            <value>
                <fullName>Incumplimiento de acuerdos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>