force-app/main/default/objects/Case/fields/Usuario_de_la_persona__c.field-meta.xml
<CustomField>
    <fullName>Usuario_de_la_persona__c</fullName>
    <label>Usuario de la persona</label>
    <length>40</length>
    <type>Text</type>
</CustomField>