force-app/main/default/objects/Case/fields/Usuario_que_utilizo__c.field-meta.xml
<CustomField>
    <fullName>Usuario_que_utilizo__c</fullName>
    <label>Usuario que utilizó</label>
    <length>40</length>
    <type>Text</type>
</CustomField>