force-app/main/default/objects/Case/fields/Vehiculo_asegurado_Renting__c.field-meta.xml
<CustomField>
    <fullName>Vehiculo_asegurado_Renting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehículo asegurado (Renting)</label>
    <type>Checkbox</type>
</CustomField>