force-app/main/default/objects/Case/fields/Vehiculo_despachado__c.field-meta.xml
<CustomField>
    <fullName>Vehiculo_despachado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehículo despachado</label>
    <type>Checkbox</type>
</CustomField>