force-app/main/default/objects/Case/fields/Vehiculo_en_lugar_de_despacho__c.field-meta.xml
<CustomField>
    <fullName>Vehiculo_en_lugar_de_despacho__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehículo en lugar de despacho</label>
    <type>Checkbox</type>
</CustomField>