force-app/main/default/objects/Case/fields/Vehiculo_rentadiario_entregado__c.field-meta.xml
<CustomField>
    <fullName>Vehiculo_rentadiario_entregado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehículo rentadiario entregado</label>
    <type>Checkbox</type>
</CustomField>