force-app/main/default/objects/Case/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Versión</label>
    <type>TextArea</type>
</CustomField>