force-app/main/default/objects/Case/fields/Vitrina_Concesionario_Texto__c.field-meta.xml
<CustomField>
    <fullName>Vitrina_Concesionario_Texto__c</fullName>
    <label>Vitrina/Concesionario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>