force-app/main/default/objects/Case/fields/Web2Case__c.field-meta.xml
<CustomField>
    <fullName>Web2Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web2Case</label>
    <type>Checkbox</type>
</CustomField>