force-app/main/default/objects/Case/recordTypes/Autos_Best_Drive.recordType-meta.xml
<RecordType>
    <fullName>Autos_Best_Drive</fullName>
    <active>false</active>
    <businessProcess>Best Drive</businessProcess>
    <description>Solicitudes de los clientes de Best Drive</description>
    <label>Best Drive</label>
</RecordType>