force-app/main/default/objects/Case/recordTypes/Autos_Entrega_Vehiculo_Nuevo_Usado_y_Renting.recordType-meta.xml
<RecordType>
    <fullName>Autos_Entrega_Vehiculo_Nuevo_Usado_y_Renting</fullName>
    <active>true</active>
    <businessProcess>Entrega Vehículo Nuevo%2C Usado y Renting</businessProcess>
    <description>Casos para la entrega de vehículo al cliente</description>
    <label>Entrega Vehículo Nuevo, Usado y Renting</label>
</RecordType>