force-app/main/default/objects/Case/recordTypes/Autos_General_Autos.recordType-meta.xml
<RecordType>
    <fullName>Autos_General_Autos</fullName>
    <active>true</active>
    <businessProcess>General Autos</businessProcess>
    <description>Casos generales de autos que no son de Best Drive, PQRSF, Mesa de ayuda, Entrega de vehículo ni de Renda diario</description>
    <label>General Autos</label>
</RecordType>