force-app/main/default/objects/Case/recordTypes/Autos_Mesa_de_Ayuda.recordType-meta.xml
<RecordType>
    <fullName>Autos_Mesa_de_Ayuda</fullName>
    <active>true</active>
    <businessProcess>Mesa de Ayuda</businessProcess>
    <description>Casos para la mesa de ayuda</description>
    <label>Mesa de Ayuda</label>
</RecordType>