force-app/main/default/objects/Case/recordTypes/Autos_PQRSFS_Autos.recordType-meta.xml
<RecordType>
    <fullName>Autos_PQRSFS_Autos</fullName>
    <active>true</active>
    <businessProcess>PQRSFS Autos</businessProcess>
    <description>Peticiones, quejas, reclamos, solicitudes, felicitaciones y sugerencias</description>
    <label>PQRSFS Autos</label>
</RecordType>