force-app/main/default/objects/Case/recordTypes/Autos_Renta_diario.recordType-meta.xml
<RecordType>
    <fullName>Autos_Renta_diario</fullName>
    <active>true</active>
    <businessProcess>Entrega Vehículo Nuevo%2C Usado y Renting</businessProcess>
    <description>Solicitudes de negocios de renta diaria de autos</description>
    <label>Renta diario</label>
</RecordType>