force-app/main/default/objects/Case/recordTypes/Motos_Consulta_Tecnica.recordType-meta.xml
<RecordType>
    <fullName>Motos_Consulta_Tecnica</fullName>
    <active>true</active>
    <businessProcess>Consulta Técnica</businessProcess>
    <label>Consulta Técnica</label>
</RecordType>