force-app/main/default/objects/Case/recordTypes/Motos_Garantia_Motos.recordType-meta.xml
<RecordType>
    <fullName>Motos_Garantia_Motos</fullName>
    <active>true</active>
    <businessProcess>PQRSFS Motos</businessProcess>
    <label>Garantía Motos</label>
</RecordType>