force-app/main/default/objects/Case/recordTypes/Motos_General_Motos.recordType-meta.xml
<RecordType>
    <fullName>Motos_General_Motos</fullName>
    <active>true</active>
    <businessProcess>General Motos</businessProcess>
    <description>No utilizar este tipo de registro!!</description>
    <label>General Motos</label>
</RecordType>