force-app/main/default/objects/Case/recordTypes/Motos_Habeas_Data.recordType-meta.xml
<RecordType>
    <fullName>Motos_Habeas_Data</fullName>
    <active>true</active>
    <businessProcess>Habeas Data</businessProcess>
    <description>No utilizar este tipo de registro!!</description>
    <label>Habeas Data</label>
</RecordType>