force-app/main/default/objects/Case/recordTypes/Motos_PQRSFS_Motos.recordType-meta.xml
<RecordType>
    <fullName>Motos_PQRSFS_Motos</fullName>
    <active>true</active>
    <businessProcess>PQRSFS Motos</businessProcess>
    <label>PQRSFS Motos</label>
</RecordType>