force-app/main/default/objects/Case/recordTypes/Motos_Recall.recordType-meta.xml
<RecordType>
    <fullName>Motos_Recall</fullName>
    <active>true</active>
    <businessProcess>Recall</businessProcess>
    <label>Recall</label>
</RecordType>