force-app/main/default/objects/Case/validationRules/PlacaVehiculoAlfanumerica.validationRule-meta.xml
<ValidationRule>
    <fullName>PlacaVehiculoAlfanumerica</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(Placa_del_vehiculo__c  ) &amp;&amp;
!(
REGEX( Placa_del_vehiculo__c   , &quot;^[a-zA-Z0-9]*$&quot;)
)</errorConditionFormula>
    <errorDisplayField>Placa_del_vehiculo__c</errorDisplayField>
    <errorMessage>La placa debe ser un valor alfanumérico</errorMessage>
</ValidationRule>