force-app/main/default/objects/Case/validationRules/RecallCerradosinEstadoCita.validationRule-meta.xml
<ValidationRule>
    <fullName>RecallCerradosinEstadoCita</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Motos_Recall&apos; &amp;&amp;  IsClosed &amp;&amp;   ISBLANK(Text(Estado_cita_recall__c))</errorConditionFormula>
    <errorDisplayField>Estado_cita_recall__c</errorDisplayField>
    <errorMessage>Debe indicar si el cliente asistió a la cita o no</errorMessage>
</ValidationRule>