force-app/main/default/objects/Case/validationRules/Respuesta_Final_del_Caso_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>Respuesta_Final_del_Caso_Requerido</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName != &apos;Autos_Best_Drive&apos; &amp;&amp;
 RecordType.DeveloperName != &apos;Autos_Entrega_Vehiculo_Nuevo_Usado_y_Renting&apos; &amp;&amp;
 RecordType.DeveloperName != &apos;Motos_Habeas_Data&apos; &amp;&amp;
 RecordType.DeveloperName != &apos;Motos_Recall&apos; &amp;&amp;
   ISBLANK(Respuesta_final_caso__c ) &amp;&amp; IsClosed &amp;&amp;  PRIORVALUE(IsClosed ) = false</errorConditionFormula>
    <errorDisplayField>Respuesta_final_caso__c</errorDisplayField>
    <errorMessage>Debe indicar la respuesta final del caso para poder cerrarlo!</errorMessage>
</ValidationRule>