force-app/main/default/objects/Case/validationRules/Valida_Cierre_Rentadiario.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Cierre_Rentadiario</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name =&quot;Renta diario&quot;,  TEXT(Status)=&quot;Cerrado&quot; ,OR(              ISBLANK(Linea__c), ISBLANK(Version__c),  ISBLANK(Ano_modelo__c),  ISBLANK(Color__c),  ISBLANK(Placa_del_vehiculo__c),  Vehiculo_rentadiario_entregado__c=false      ))</errorConditionFormula>
    <errorMessage>No se puede cerrar un caso renta diario si falta algún campo de la sección información del vehículo.</errorMessage>
</ValidationRule>