force-app/main/default/objects/Case/validationRules/Valida_Entrega_Aprobada.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Entrega_Aprobada</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name =&quot;Entrega Vehículo Nuevo, Usado y Renting&quot;,  TEXT(Status)=&quot;Cerrado&quot;, Entrega_de_Vehculo_aprobada__c = false,    NOT(CONTAINS(Description, &quot;Se cierra caso por perdida de oportunidad en etapa&quot;))  )</errorConditionFormula>
    <errorMessage>No puede cerrar este caso sin una aprobación por parte del Jefe administrativo.</errorMessage>
</ValidationRule>