force-app/main/default/objects/Case/validationRules/Valida_Garantias_Aprobadas.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Garantias_Aprobadas</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( TEXT(Subcategoria_2__c)=&quot;Baterías&quot;, TEXT(Subcategoria_2__c)=&quot;Diferente a Baterías&quot;), TEXT(Status)=&quot;Cerrado&quot;,  Garantia_aprobada__c =false,  Garantia_bateria_aprobada__c =false)</errorConditionFormula>
    <errorMessage>Debe recibir aprobación de la garantía solicitada sobre este caso en subcategoría 2.</errorMessage>
</ValidationRule>