force-app/main/default/objects/Case/validationRules/Valida_Respuesta_enviada_caso_PQRSF.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Respuesta_enviada_caso_PQRSF</fullName>
    <active>true</active>
    <description>Para los casos PQRSF si la casilla “Respuesta enviada” no ha sido marcada no se permitirá el cierre del caso</description>
    <errorConditionFormula>AND( RecordType.Name =&apos;PQRSFS Autos&apos;, ISCHANGED(Status), ISPICKVAL(Status, &apos;Cerrado&apos;),  Respuesta_Enviada__c =false)</errorConditionFormula>
    <errorMessage>Debe marcar la casilla “Respuesta enviada” para proceder a cerrar el caso.</errorMessage>
</ValidationRule>