force-app/main/default/objects/Case/listViews/Asesores_servicio_Autocipres_SantaSofia_Case.listView-meta.xml
<ListView>
    <fullName>Asesores_servicio_Autocipres_SantaSofia_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Asesores servicio Autocipres SantaSofia</label>
    <queue>Asesores_servicio_Autocipres_SantaSofia</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>