force-app/main/default/objects/Case/listViews/Asesores_servicio_Autopalma_Case.listView-meta.xml
<ListView>
    <fullName>Asesores_servicio_Autopalma_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Asesores servicio Autopalma</label>
    <queue>Asesores_servicio_Autopalma</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>