force-app/main/default/objects/Case/listViews/Autoceiba_Norte_Asesores_de_servios_Case.listView-meta.xml
<ListView>
    <fullName>Autoceiba_Norte_Asesores_de_servios_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Asesores servicio Autoceiba Norte</label>
    <queue>Asesores_servicio_Autoceiba_Norte</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>